--- a/tabela.css
+++ b/tabela.css
@@ -31,9 +31,9 @@ table {
 th, td {
     border: 1px solid #dddddd;
     text-align: left;
-    padding: 8px;
+    padding: 15px;
 }
-.teste{
+.escuro{
     background-color: #f2f2f2;
 }
 th {
@@ -59,7 +59,6 @@ li{
 }
 
 li:hover{
-	background-image: linear-gradient(to top, #888686, #0c0c0c );
-	box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
-	text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+	background-image: linear-gradient(to bottom, #154072, #2a8cdb );
+	box-shadow: 3px 3px 10px rgba(50, 154, 240, 0.5);
 }
