--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ footer{
     text-align: center;
     cursor: pointer;
     text-decoration: none;
-    color: #fff;
+    color: black;
     background-color: #ff9100;
     position: relative;
     left: 85%;
