Ajustes para favorecer a padronização do trabalho

--- a/style.css
+++ b/style.css
@@ -29,21 +29,23 @@ header{
 form input{
     
     display: flex;
-    border-radius: 10px;
+    border-radius: 6px;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-    bottom: 49px;
+    bottom: 58px;
     width: 20%;
+    height: 20px;
     border: none;
 
 }
 form label{
     font-weight: bold;
+    font-size: large;
     position: relative;
     left: 35%;
     transform: translateX(-50%);
-    bottom: 33px;
+    bottom: 37px;
     color: black;
 }  
 ul{
@@ -59,6 +61,7 @@ ul .login{
 li{
     display: inline-block;
     font-weight: bold;
+    font-size: large;
     color: black;
     padding: 15px;
     
@@ -115,6 +118,7 @@ footer{
 .button {
     display: flex;
     font-size: 19px;
+    font-weight: bold;
     justify-content: center; 
     text-align: center;
     cursor: pointer;
@@ -128,6 +132,10 @@ footer{
     width: 20%;
     padding: 7px;
     border-radius: 15px;
+    border: solid black 2px;
     
+}
+.button:hover{
+    padding: 10px 10px;
 }
 
