--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ footer{
 }
 .subitem2{
     display: flex;
-    background-color: whi;
+    background-color: white;
     flex-direction: column;
     width: 25%;
     border-bottom-right-radius: 15px;
