--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ footer{
     border-bottom-right-radius: 15px;
     border-top-right-radius: 15px;
     padding-right: 25px;
+    min-width: 250px;
 }
 .button {
     display: flex;
